--- a/css/main.scss
+++ b/css/main.scss
@@ -4,4 +4,4 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
-}/*# sourceMappingURL=main.css.map */
+}
