--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,151 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
+}
+
+header {
+  padding: 0 3%;
+  height: 120px;
+  background-color: #f6f5f0;
+}
+header .inner {
+  width: 1100px;
+  height: 120px;
+  margin: 0 auto;
+  position: relative;
+}
+header .logo {
+  width: 75px;
+  height: 75px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  left: 0;
+}
+header .sub-menu {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 10px;
+  right: 0;
+  display: flex;
+}
+header .sub-menu .menu {
+  display: flex;
+  position: relative;
+}
+header .sub-menu .menu li a {
+  color: inherit;
+  font-size: 12px;
+  text-decoration: none;
+  padding: 11px 16px;
+}
+header .sub-menu .menu li a:hover {
+  color: black;
+}
+header .sub-menu .menu li::before {
+  content: "";
+  width: 1px;
+  height: 14px;
+  background-color: #e5e5e5;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+}
+header .sub-menu .menu li:first-child::before {
+  display: none;
+}
+header .sub-menu .search {
+  position: relative;
+}
+header .sub-menu .search input {
+  width: 36px;
+  height: 34px;
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+  background-color: #fff;
+  color: #777;
+  transition: width 0.5s;
+}
+header .sub-menu .search input:focus {
+  outline: none;
+  width: 190px;
+  border-color: #669900;
+}
+header .sub-menu .search.focused .material-icons {
+  opacity: 0;
+}
+header .sub-menu .search .material-icons {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  height: 24px;
+  right: 5px;
+  transition: 0.4s;
+}
+header .main-menu .menu {
+  display: flex;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+header .main-menu .menu .item {
+  font-size: 13px;
+}
+header .main-menu .menu .item .item-title {
+  padding: 10px 20px 34px 20px;
+}
+header .main-menu .menu .item .item-title:hover {
+  display: block;
+  color: #669900;
+  background-color: #333;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+header .main-menu .menu .item .item-contents {
+  position: fixed;
+  left: 0;
+  background-color: #333;
+  width: 100%;
+}
+header .main-menu .menu .item .item-contents .contents-menu {
+  padding: 10px 0 20px;
+  width: 1100px;
+  margin: auto;
+  display: flex;
+}
+header .main-menu .menu .item .item-contents .contents-menu ul {
+  margin-right: 100px;
+}
+header .main-menu .menu .item .item-contents .contents-menu h4 {
+  color: white;
+  font-size: 14px;
+  margin: 20px 0 10px;
+}
+header .main-menu .menu .item .item-contents .contents-menu li {
+  color: #ddd;
+  line-height: 2;
+}
+header .main-menu .menu .item .item-contents .contents-bottom {
+  color: #fff;
+  background-image: url("../images/reserve_bg.jpg");
+}
+header .main-menu .menu .item .item-contents .contents-bottom .bottom-contents {
+  width: 1100px;
+  margin: auto;
+}
+header .main-menu .menu .item .item-contents .contents-bottom .bottom-contents h4 {
+  color: #bbb;
+}
+header .main-menu .menu .item .item-contents .contents-bottom .bottom-contents p {
+  color: #669900;
+}
+header .main-menu .menu .item .item-contents .contents-bottom .bottom-contents p :first-child {
+  color: red;
 }/*# sourceMappingURL=main.css.map */
