--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,180 @@
+$green: #669900;
+$black: #333;
+
 body {
-  color: #333;
+  color: $black;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
+  // background-color: red;
+}
+
+@mixin vc() {
+  position: absolute; //absolute면 display: block이 됨
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+}
+
+header {
+  padding: 0 3%;
+  height: 120px;
+  background-color: #f6f5f0;
+  .inner {
+    width: 1100px;
+    height: 120px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .logo {
+    width: 75px;
+    height: 75px;
+    @include vc();
+    left: 0;
+  }
+  .sub-menu {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 10px;
+    right: 0;
+    display: flex;
+    .menu {
+      display: flex;
+      position: relative;
+      li {
+        a {
+          color: inherit;
+          font-size: 12px;
+          text-decoration: none;
+          padding: 11px 16px; // 인라인 가로,세로 넓힐 생각말고 padding값으로 늘리자..!
+          &:hover {
+            color: black;
+          }
+          // background-color: navajowhite;
+        }
+      }
+      li::before {
+        content: "";
+        width: 1px;
+        height: 14px;
+        background-color: #e5e5e5;
+        @include vc();
+      }
+      li:first-child::before {
+        display: none;
+      }
+    }
+    .search {
+      position: relative;
+      input {
+        width: 36px;
+        height: 34px;
+        padding: 4px 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-sizing: border-box;
+        outline: none;
+        background-color: #fff;
+        color: #777;
+        transition: width 0.5s;
+        &:focus {
+          outline: none;
+          width: 190px;
+          border-color: $green;
+        }
+      }
+      &.focused {
+        .material-icons {
+          opacity: 0;
+        }
+      }
+      .material-icons {
+        @include vc();
+        height: 24px; // 요소에  너비가 포함되어있어야하므로\
+        right: 5px;
+        transition: 0.4s;
+      }
+    }
+  }
+  .main-menu {
+    // position: relative;
+    .menu {
+      display: flex;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      // background-color: pink;
+      .item {
+        font-size: 13px;
+        .item-title {
+          padding: 10px 20px 34px 20px;
+          &:hover {
+            display: block;
+            color: $green;
+            background-color: $black;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+          }
+        }
+        .item-contents {
+          // display: none;
+          // display: block;
+          position: fixed;
+          // bottom: -10;
+          left: 0;
+          background-color: $black;
+          width: 100%;
+          // padding: 50px 0;
+          // box-sizing: border-box;
+          // background-color: red;
+          .contents-menu {
+            // background-color: navy;
+            padding: 10px 0 20px;
+            // 패딩주는데 왜 잘리지??? box-sizing 해도 안됨...?ㅎ
+
+            width: 1100px;
+            margin: auto;
+            display: flex;
+            ul {
+              margin-right: 100px;
+              // margin-bottom: 30px;
+            }
+            h4 {
+              color: white;
+              font-size: 14px;
+              margin: 20px 0 10px;
+            }
+            li {
+              color: #ddd;
+              line-height: 2;
+            }
+          }
+          .contents-bottom {
+            // position: absolute;
+            // bottom: 0;
+            // left: 0;
+            // right: 0;
+            color: #fff;
+            background-image: url("../images/reserve_bg.jpg");
+            .bottom-contents {
+              width: 1100px;
+              margin: auto;
+              // background-color: navajowhite;
+              h4 {
+                color: #bbb;
+              }
+              p {
+                color: $green;
+                :first-child {
+                  color: red; // 왜 안먹히지???????????????????????????
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
