--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,9 @@ body {
 }
 
 header {
-  padding: 0 3%;
-  height: 120px;
   background-color: #f6f5f0;
+  position: relative;
+  border-bottom: 1px solid #c8c8c8;
 }
 header > .inner {
   width: 1100px;
@@ -173,4 +173,16 @@ header .main-menu .item .item__contents .contents__texture > div h4 {
 header .main-menu .item .item__contents .contents__texture > div p {
   color: #669900;
   margin: 4px 0 14px;
+}
+header .badges {
+  position: absolute;
+  top: 132px;
+  right: 12px;
+}
+header .badges .badge {
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 12px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
