--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,14 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
+  height: 3000px;
 }
 
 header {
+  width: 100%;
   background-color: #f6f5f0;
-  position: relative;
+  position: fixed;
+  top: 0;
   border-bottom: 1px solid #c8c8c8;
 }
 header > .inner {
