--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ header {
   position: fixed;
   top: 0;
   border-bottom: 1px solid #c8c8c8;
+  z-index: 9;
 }
 header > .inner {
   width: 1100px;
@@ -188,4 +189,69 @@ header .badges .badge {
   margin-bottom: 12px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+.visual {
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+.visual .inner {
+  width: 1100px;
+  height: 646px;
+  margin: 0 auto;
+  position: relative;
+}
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+.visual .title .btn {
+  position: absolute;
+  top: 259px;
+  left: 173px;
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #592b18;
+  border-radius: 4px;
+  color: #592b18;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+}
+.visual .title .btn:hover {
+  color: white;
+  background-color: #592b18;
+}
+.visual .cup1.image {
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+.visual .spoon.image {
+  position: absolute;
+  bottom: 0;
+  left: 275px;
 }/*# sourceMappingURL=main.css.map */
