--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+@charset "UTF-8";
+a {
+  text-decoration: none;
+}
+
+img {
+  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
+  display: block;
+}
+
 body {
   color: #333;
   font-size: 16px;
@@ -138,7 +148,6 @@ header .main-menu .item .item__contents .contents__menu {
 header .main-menu .item .item__contents .contents__menu > ul {
   width: 1100px;
   margin: 0 auto;
-  position: relative;
   display: flex;
   padding: 20px 0;
   box-sizing: border-box;
@@ -214,7 +223,7 @@ header .badges .badge {
   text-decoration: none;
   width: 130px;
   padding: 10px;
-  border: 2px solid #592b18;
+  border: 1px solid #592b18;
   border-radius: 4px;
   color: #592b18;
   background-color: transparent;
@@ -254,4 +263,701 @@ header .badges .badge {
   position: absolute;
   bottom: 0;
   left: 275px;
+}
+.visual .fade-in {
+  opacity: 0;
+}
+
+.notice .notice-line {
+  position: relative;
+}
+.notice .notice-line .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.notice .notice-line .bg-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
+}
+.notice .notice-line .inner {
+  width: 1100px;
+  height: 62px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  display: flex;
+}
+.notice .notice-line .inner .inner__left {
+  width: 60%;
+  height: 100%;
+  background-color: #333;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice .notice-line .inner .inner__left h2 {
+  color: white;
+  font-size: 17px;
+  font-weight: 700;
+  margin-right: 20px;
+}
+.notice .notice-line .inner .inner__left .swiper-container {
+  flex-grow: 1;
+  height: 62px;
+}
+.notice .notice-line .inner .inner__left .swiper-slide {
+  height: 62px;
+  display: flex;
+  align-items: center;
+}
+.notice .notice-line .inner .inner__left .swiper-slide a {
+  color: white;
+}
+.notice .notice-line .inner .inner__left .notice-line__more {
+  height: 62px;
+  width: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice .notice-line .inner .inner__left .notice-line__more .material-icons {
+  color: white;
+  font-size: 30px;
+}
+.notice .notice-line .inner__right {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.notice .notice-line .inner__right h2 {
+  font-size: 17px;
+  font-weight: 700;
+}
+.notice .notice-line .inner__right .toggle-promotion {
+  height: 62px;
+  width: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.notice .notice-line .inner__right .toggle-promotion .material-icons {
+  font-size: 30px;
+}
+.notice .promotion {
+  height: 693px;
+  background-color: #f6f5ef;
+  position: relative;
+  transition: height 0.4s;
+  overflow: hidden;
+}
+.notice .promotion.hide {
+  height: 0px;
+}
+.notice .promotion .swiper-container {
+  width: 2477px;
+  height: 553px;
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: -1238.5px;
+}
+.notice .promotion .swiper-slide {
+  opacity: 0.5;
+  transition: opacity 1s;
+  position: relative;
+}
+.notice .promotion .swiper-slide-active {
+  opacity: 1;
+}
+.notice .promotion .swiper-slide .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.notice .promotion .swiper-slide .btn:hover {
+  color: white;
+  background-color: #333;
+}
+.notice .promotion .swiper-pagination {
+  bottom: 40px;
+  left: 0;
+  right: 0;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet {
+  background-image: url("../images/promotion_slide_pager.png");
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  outline: none;
+  background-color: transparent;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url("../images/promotion_slide_pager_on.png");
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0px;
+}
+.notice .promotion .swiper-prev,
+.notice .promotion .swiper-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+.notice .promotion .swiper-prev:hover,
+.notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: white;
+}
+.notice .promotion .swiper-prev {
+  left: 50%;
+  margin-left: -480px;
+}
+.notice .promotion .swiper-next {
+  right: 50%;
+  margin-right: -480px;
+}
+
+.rewards {
+  position: relative;
+}
+.rewards .rewards-left {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background-color: #272727;
+}
+.rewards .rewards-right {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #d5c798;
+}
+.rewards .inner {
+  width: 1100px;
+  height: 241px;
+  margin: 0 auto;
+  z-index: 1;
+  background-image: url("../images/rewards.jpg");
+  background-position: center;
+  position: relative;
+}
+.rewards .inner .btn-group {
+  position: absolute;
+  right: 0;
+  bottom: 24px;
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.rewards .inner .btn-group .btn.sign-up {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 4px;
+  color: white;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  border-color: #333;
+  background-color: #333;
+  margin-right: 10px;
+}
+.rewards .inner .btn-group .btn.sign-up:hover {
+  color: #333;
+  background-color: transparent;
+}
+.rewards .inner .btn-group .btn.sign-in {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  width: 110px;
+}
+.rewards .inner .btn-group .btn.sign-in:hover {
+  color: white;
+  background-color: #333;
+}
+.rewards .inner .btn-group .btn.gift {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  flex: 1;
+  margin-top: 10px;
+}
+.rewards .inner .btn-group .btn.gift:hover {
+  color: white;
+  background-color: #333;
+}
+
+.season-product {
+  background-image: url(../images/season_product_bg.jpg);
+}
+.season-product .inner {
+  width: 1100px;
+  height: 400px;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+}
+.season-product .inner .product {
+  position: absolute;
+}
+.season-product .inner .text-group {
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+.season-product .inner .text-group .title {
+  margin-bottom: 10px;
+}
+.season-product .inner .text-group .description {
+  margin-bottom: 15px;
+}
+.season-product .inner .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+}
+.season-product .inner .btn:hover {
+  color: white;
+  background-color: #333;
+}
+
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+.reserve-coffee .inner {
+  width: 1100px;
+  height: 400px;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
+}
+.reserve-coffee .inner .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+.reserve-coffee .inner .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+.reserve-coffee .inner .text-group .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #d9aa8a;
+  border-radius: 4px;
+  color: #d9aa8a;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+}
+.reserve-coffee .inner .text-group .btn:hover {
+  color: white;
+  background-color: #d9aa8a;
+}
+.reserve-coffee .inner .product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.pick-your-favorite .inner {
+  width: 1100px;
+  height: 706px;
+  margin: 0 auto;
+  padding: 110px 0;
+  box-sizing: border-box;
+}
+.pick-your-favorite .inner .text-group {
+  width: 362px;
+  margin-left: 100px;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+.pick-your-favorite .inner .text-group .title {
+  margin-bottom: 40px;
+}
+.pick-your-favorite .inner .text-group .description {
+  margin-bottom: 40px;
+}
+.pick-your-favorite .inner .text-group .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 4px;
+  color: white;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  background-color: transparent;
+}
+.pick-your-favorite .inner .text-group .btn:hover {
+  color: #333;
+  background-color: transparent;
+}
+.pick-your-favorite .inner .text-group .btn:hover {
+  background-color: white;
+}
+
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.reserve-store .inner {
+  width: 1100px;
+  height: 600px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reserve-store .inner .medal {
+  width: 334px;
+  height: 334px;
+}
+.reserve-store .inner .medal .front {
+  position: absolute;
+}
+.reserve-store .inner .medal .back {
+  position: absolute;
+}
+.reserve-store .inner .medal .back .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  position: absolute;
+  top: 240px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.reserve-store .inner .medal .back .btn:hover {
+  color: white;
+  background-color: #333;
+}
+
+.find-store {
+  background-image: url("../images/find_store_bg.jpg");
+}
+.find-store .inner {
+  width: 1100px;
+  height: 400px;
+  margin: 0 auto;
+  position: relative;
+}
+.find-store .inner .texture1 {
+  position: absolute;
+  top: 0;
+  left: 400px;
+}
+.find-store .inner .texture2 {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.find-store .inner .picture1,
+.find-store .inner .picture2 {
+  border-radius: 50%;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  position: absolute;
+}
+.find-store .inner .picture1 {
+  top: -60px;
+  left: 0;
+}
+.find-store .inner .picture2 {
+  top: 150px;
+  left: 250px;
+}
+.find-store .inner .text-group {
+  position: absolute;
+  top: 120px;
+  left: 550px;
+}
+.find-store .inner .text-group .title,
+.find-store .inner .text-group .description {
+  margin-bottom: 20px;
+}
+.find-store .inner .text-group .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #333;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+}
+.find-store .inner .text-group .btn:hover {
+  color: white;
+  background-color: #333;
+}
+
+.awards {
+  background-color: #272727;
+}
+.awards .inner {
+  width: 1100px;
+  height: 120px;
+  margin: 0 auto;
+  padding: 40px 0;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.awards .inner .swiper-container .swiper-wrapper {
+  display: flex;
+}
+.awards .inner .swiper-container .swiper-wrapper .swiper-slide {
+  display: flex;
+}
+.awards .inner .swiper-prev,
+.awards .inner .swiper-next {
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: white;
+  opacity: 0.3;
+  transition: 0.4s;
+}
+.awards .inner .swiper-prev:hover,
+.awards .inner .swiper-next:hover {
+  background-color: white;
+  color: #272727;
+}
+.awards .inner .swiper-prev {
+  left: -100px;
+}
+.awards .inner .swiper-next {
+  right: -100px;
+}
+
+footer {
+  background-color: #272727;
+  border-top: 1px solid #333;
+  color: white;
+  font-size: 12px;
+  font-weight: 400;
+}
+footer .inner {
+  width: 1100px;
+  height: 333;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0 60px 0;
+}
+footer .inner .menu {
+  display: flex;
+  justify-content: center;
+}
+footer .inner .menu li {
+  position: relative;
+  padding: 15px;
+}
+footer .inner .menu li a {
+  color: #ccc;
+}
+footer .inner .menu li a.green {
+  color: #669900;
+}
+footer .inner .menu li::before {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: #555;
+  border-radius: 50%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -1px;
+}
+footer .inner .btn-group {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+footer .inner .btn-group .btn {
+  text-decoration: none;
+  width: 130px;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 4px;
+  color: white;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: 0.4s;
+  font-size: 12px;
+  margin-right: 10px;
+}
+footer .inner .btn-group .btn:hover {
+  color: #333;
+  background-color: transparent;
+}
+footer .inner .btn-group .btn:hover {
+  background-color: #fff;
+}
+footer .inner .info {
+  margin-top: 30px;
+  color: #999;
+  display: flex;
+}
+footer .inner .info li {
+  padding: 0 10px;
+}
+footer .inner p {
+  margin-top: 12px;
+  color: #999;
+}
+footer .inner .text-logo {
+  margin: 30px auto 0;
+}
+
+.to-top {
+  width: 42px;
+  height: 42px;
+  color: white;
+  background-color: #333;
+  border: 1px solid white;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
 }/*# sourceMappingURL=main.css.map */
