--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,13 @@ $black: #333;
 $brown: #592b18;
 $gold: #d9aa8a;
 
+a {
+  text-decoration: none;
+}
+img {
+  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
+  display: block;
+}
 body {
   color: $black;
   font-size: 16px;
@@ -23,14 +30,13 @@ body {
   width: 1100px;
   height: #{$h};
   margin: 0 auto;
-  position: relative;
 }
 
 @mixin btn($color) {
   text-decoration: none;
   width: 130px;
   padding: 10px;
-  border: 2px solid $color;
+  border: 1px solid $color;
   border-radius: 4px;
   color: $color;
   background-color: transparent;
@@ -43,11 +49,12 @@ body {
   transition: 0.4s;
   &:hover {
     @if ($color == white) {
-      color: #333;
+      color: $black;
+      background-color: transparent;
     } @else {
       color: white;
+      background-color: $color;
     }
-    background-color: $color;
   }
 }
 
@@ -59,8 +66,8 @@ header {
   border-bottom: 1px solid #c8c8c8;
   z-index: 9;
   > .inner {
-    // height: 120px;
     @include inner(120px);
+    position: relative;
   }
   .logo {
     width: 75px;
@@ -238,6 +245,7 @@ header {
   background-position: center;
   .inner {
     @include inner(646px);
+    position: relative;
   }
   .title {
     position: absolute;
@@ -281,4 +289,531 @@ header {
       left: 275px;
     }
   }
+  .fade-in {
+    opacity: 0; // 차근차근 나타나게 하는 기본 세팅
+  }
+}
+
+.notice {
+  .notice-line {
+    position: relative;
+    .bg-left {
+      width: 50%;
+      height: 100%;
+      background-color: $black;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .bg-right {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 50%;
+      height: 100%;
+      background-color: #f6f5ef;
+    }
+    .inner {
+      @include inner(62px);
+      position: relative;
+      z-index: 1;
+      display: flex;
+      // relative로 인해 줄어들려고 하다가, inner부분때문에 62px됨
+      // 따라서 br-left, bg-right도 62px이 됨
+      .inner__left {
+        width: 60%;
+        height: 100%;
+        background-color: $black;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        h2 {
+          color: white;
+          font-size: 17px;
+          font-weight: 700;
+          margin-right: 20px;
+        }
+        .swiper-container {
+          flex-grow: 1; // 영역 안잡히는거 해결
+          height: 62px;
+        }
+        .swiper-slide {
+          height: 62px;
+          display: flex;
+          align-items: center;
+
+          a {
+            color: white;
+          }
+        }
+        .notice-line__more {
+          height: 62px;
+          width: 62px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .material-icons {
+            color: white;
+            font-size: 30px;
+          }
+        }
+      }
+    }
+
+    .inner__right {
+      width: 40%;
+      height: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      h2 {
+        font-size: 17px;
+        font-weight: 700;
+      }
+      .toggle-promotion {
+        height: 62px;
+        width: 62px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        .material-icons {
+          font-size: 30px;
+        }
+      }
+    }
+  }
+  .promotion {
+    height: 693px;
+    background-color: #f6f5ef;
+    position: relative;
+    transition: height 0.4s;
+    overflow: hidden;
+    &.hide {
+      height: 0px;
+    }
+    .swiper-container {
+      width: calc(819px * 3 + 20px);
+      height: 553px;
+      position: absolute;
+      top: 40px;
+      // 정가운데로 기준점 잡는 방법
+      left: 50%;
+      margin-left: calc(
+        (819px * 3 + 20px) / -2
+      ); // container의 가로 / -2(음수로 만들어야해서)
+    }
+    .swiper-slide {
+      opacity: 0.5;
+      transition: opacity 1s; // opacity만 1초동안 전환
+      position: relative;
+      &-active {
+        opacity: 1;
+      }
+      .btn {
+        @include btn($black);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto; //요소 가로 넓이 필요!
+      }
+    }
+    .swiper-pagination {
+      bottom: 40px; // swiper-pagination에는
+      left: 0; // 자체적으로 position값이 지정 되어있어서
+      right: 0; // 별도 기재 필요 없음
+      .swiper-pagination-bullet {
+        background-image: url("../images/promotion_slide_pager.png");
+        width: 12px;
+        height: 12px;
+        margin-right: 6px;
+        outline: none;
+        background-color: transparent;
+        &-active {
+          background-image: url("../images/promotion_slide_pager_on.png");
+        }
+        &:last-child {
+          margin-right: 0px;
+        }
+      }
+    }
+    .swiper-prev,
+    .swiper-next {
+      width: 42px;
+      height: 42px;
+      border: 2px solid $black;
+      border-radius: 50%;
+      position: absolute;
+      top: 300px;
+      z-index: 1;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.4s;
+      &:hover {
+        background-color: $black;
+        color: white;
+      }
+    }
+    .swiper-prev {
+      left: 50%;
+      margin-left: -480px;
+    }
+    .swiper-next {
+      right: 50%;
+      margin-right: -480px;
+    }
+  }
+}
+
+.rewards {
+  position: relative;
+  .rewards-left {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    background-color: #272727;
+  }
+  .rewards-right {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #d5c798;
+  }
+  .inner {
+    @include inner(241px);
+    z-index: 1;
+    background-image: url("../images/rewards.jpg");
+    background-position: center;
+    position: relative;
+    .btn-group {
+      position: absolute;
+      right: 0;
+      bottom: 24px;
+      width: 250px;
+      display: flex;
+      flex-wrap: wrap;
+      .btn {
+        &.sign-up {
+          @include btn(white);
+          border-color: $black;
+          background-color: $black;
+          margin-right: 10px;
+        }
+        &.sign-in {
+          @include btn($black);
+          width: 110px;
+        }
+        &.gift {
+          @include btn($black);
+          flex: 1;
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+}
+
+.youtube {
+}
+
+.season-product {
+  background-image: url(../images/season_product_bg.jpg);
+
+  .inner {
+    @include inner(400px);
+    position: relative;
+    display: flex;
+    .product {
+      position: absolute;
+    }
+    .text-group {
+      position: absolute;
+      top: 110px;
+      right: 100px;
+      .title {
+        margin-bottom: 10px;
+      }
+      .description {
+        margin-bottom: 15px;
+      }
+    }
+    .btn {
+      @include btn($black);
+    }
+  }
+}
+
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+  .inner {
+    @include inner(400px);
+    display: flex;
+    position: relative;
+    .reserve-logo {
+      position: absolute;
+      top: 110px;
+      left: 0;
+    }
+    .text-group {
+      position: absolute;
+      top: 124px;
+      left: 208px;
+      .btn {
+        @include btn($gold);
+      }
+    }
+    .product {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+}
+
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  background-position: center;
+  background-size: cover;
+
+  .inner {
+    @include inner(706px);
+    padding: 110px 0;
+    box-sizing: border-box;
+    .text-group {
+      width: 362px;
+      margin-left: 100px;
+      display: flex;
+      justify-content: flex-end;
+      flex-wrap: wrap;
+      .title {
+        margin-bottom: 40px;
+      }
+      .description {
+        margin-bottom: 40px;
+      }
+      .btn {
+        @include btn(white);
+        background-color: transparent;
+        &:hover {
+          background-color: white;
+        }
+      }
+    }
+  }
+}
+
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  .inner {
+    @include inner(600px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .medal {
+      width: 334px;
+      height: 334px;
+      .front {
+        position: absolute;
+      }
+      .back {
+        position: absolute;
+        .btn {
+          @include btn($black);
+          position: absolute; // 여기서 relative가 inner가 되는구나
+          top: 240px;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+    }
+  }
+}
+
+.find-store {
+  background-image: url("../images/find_store_bg.jpg");
+  .inner {
+    @include inner(400px);
+    position: relative;
+    // background-color: $green;
+    // display: flex;
+    .texture1 {
+      position: absolute;
+      top: 0;
+      left: 400px;
+    }
+    .texture2 {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+    .picture1,
+    .picture2 {
+      border-radius: 50%;
+      box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.5);
+      position: absolute;
+    }
+    .picture1 {
+      top: -60px;
+      left: 0;
+    }
+    .picture2 {
+      top: 150px;
+      left: 250px;
+    }
+    .text-group {
+      position: absolute;
+      top: 120px;
+      left: 550px;
+      .title,
+      .description {
+        margin-bottom: 20px;
+      }
+      .btn {
+        @include btn($black);
+      }
+    }
+  }
+}
+
+.awards {
+  background-color: #272727;
+  .inner {
+    @include inner(120px);
+    padding: 40px 0;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    align-items: center;
+    .swiper-container {
+      .swiper-wrapper {
+        display: flex;
+        .swiper-slide {
+          display: flex;
+        }
+      }
+    }
+    .swiper-prev,
+    .swiper-next {
+      position: absolute;
+      width: 42px;
+      height: 42px;
+      border-radius: 50%;
+      border: 1px solid white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      color: white;
+      opacity: 0.3;
+      transition: 0.4s;
+      &:hover {
+        background-color: white;
+        color: #272727;
+      }
+    }
+    .swiper-prev {
+      left: -100px;
+    }
+    .swiper-next {
+      right: -100px;
+    }
+  }
+}
+
+footer {
+  background-color: #272727;
+  border-top: 1px solid $black;
+  color: white;
+  font-size: 12px;
+  font-weight: 400;
+  .inner {
+    @include inner(333);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0 60px 0;
+    .menu {
+      display: flex;
+      justify-content: center;
+      li {
+        position: relative;
+        padding: 15px;
+        a {
+          color: #ccc;
+          &.green {
+            color: $green;
+          }
+        }
+        &::before {
+          content: "";
+          width: 3px;
+          height: 3px;
+          background-color: #555;
+          border-radius: 50%;
+          margin: auto;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: -1px;
+        }
+      }
+    }
+    .btn-group {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      .btn {
+        @include btn(white);
+        font-size: 12px;
+        margin-right: 10px;
+        &:hover {
+          background-color: #fff;
+        }
+      }
+    }
+    .info {
+      margin-top: 30px;
+      color: #999;
+      display: flex;
+      li {
+        padding: 0 10px;
+      }
+    }
+    p {
+      margin-top: 12px;
+      color: #999;
+    }
+    .text-logo {
+      margin: 30px auto 0;
+    }
+  }
+}
+
+.to-top {
+  width: 42px;
+  height: 42px;
+  color: white;
+  background-color: $black;
+  border: 1px solid white;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
 }
