style: 특정 위치에서 to-top버튼 사라지게하기

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,34 @@ body {
   font-family: "Noto Sans KR", sans-serif;
 }
 
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+}
+.show .back-to-position.delay-0 {
+  transition-delay: 0;
+}
+.show .back-to-position.delay-1 {
+  transition-delay: 0.3s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: 0.6s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: 0.9s;
+}
+
 header {
   width: 100%;
   background-color: #f6f5f0;
@@ -1028,7 +1056,7 @@ footer .inner .text-logo {
   margin: 30px auto 0;
 }
 
-.to-top {
+#to-top {
   width: 42px;
   height: 42px;
   color: white;
