--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,34 @@ body {
   }
 }
 
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+  &.to-right {
+    transform: translateX(-150px);
+  }
+  &.to-left {
+    transform: translateX(150px);
+  }
+}
+
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+  &.delay-0 {
+    transition-delay: 0;
+  }
+  &.delay-1 {
+    transition-delay: 0.3s;
+  }
+  &.delay-2 {
+    transition-delay: 0.6s;
+  }
+  &.delay-3 {
+    transition-delay: 0.9s;
+  }
+}
+
 header {
   width: 100%;
   background-color: #f6f5f0;
@@ -871,7 +899,7 @@ footer {
   }
 }
 
-.to-top {
+#to-top {
   width: 42px;
   height: 42px;
   color: white;
